titulo con parrafo

--- a/Prueba.html
+++ b/Prueba.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Juan Paniza</h1>
+    <p>Juan en un joven de 26 años con muchas ganas de salir adelante</p>
 </body>
 </html>
