--- a/Prueba.html
+++ b/Prueba.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Juan Paniza</h1>
-    <p>Juan en un joven de 26 años con muchas ganas de salir adelante</p>
+    <p>Juan en un joven de 26 años con muchas ganas de salir adelante.</p>
 </body>
 </html>
